--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,18 @@
 .container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-    /* outline: 2px solid orange;
-    outline-offset: -2px; */
+  margin: 0 auto;
+  padding: 0 15px;
+  // outline: 2px solid orange;
+  // outline-offset: -2px;
+  // mobile - 480px
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
   }
+  // tablet - 768px
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  // desktop - 1200px
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
