--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -1,14 +1,39 @@
 .about-us {
+  @media screen and (min-width: 1200px) {
     padding-bottom: 0;
-  
+  }
     
+         
   &__list {
-    display: flex;
-    gap: 30px;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    gap: 30px;  
+    }
   }
+
   &__item {
-    width: calc((100% - 90px) / 4);
+    &:not(:last-child){
+      margin-bottom: 30px;
   }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+    &:not(:last-child){
+      margin-bottom: 0;
+  }
+
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 30px * 3) / 4);
+    }
+  }
+  }
+   
+
   &__icons {
     display: flex;
     align-items: center;
@@ -24,6 +49,10 @@
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    text-align: center;
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
   }
   
   &__text {
