--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -2,18 +2,36 @@
     display: flex;
     gap: 30px;
     justify-content: center;
+    flex-wrap: wrap;   
   }
   
+  .clients-item{
+    flex-basis: calc((100% - 30px) / 2);
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 30px * 2) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc((100% - 30px * 5) / 6);
+    }
+}
   .clients-link {
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #afb1b8;
     border-radius: 4px;
-    width: 170px;
+    width: 210px;
     height: 92px;
     fill: var(--icon-color);
     transition: fill var(--anim), border var(--anim);
+    @media screen and (min-width: 768px) {
+      width: 226px;      
+    }
+    @media screen and (min-width: 1200px) {
+      width: 170px;  
+    }
   }
   .clients-link:hover,
   .clients-link:focus {
