--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,7 +5,8 @@
   }
   
   .logo-footer {
-    display: inline-block;
+    display: block;
+    text-align: center;
     margin-bottom: 20px;
     color: var(--main-white);
     font-family: 'Raleway';
@@ -13,6 +14,12 @@
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+      display: inline-block;
+      text-align: left;
+  }
+    
   }
   .logo-ftr {
     color: var(--accent-color);
@@ -23,8 +30,23 @@
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+      
+    }
   }
   
+
+.footer-contacts {
+  margin-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
+}
   .contacts {
     display: inline-block;
     color: var(--footer-color);
@@ -35,6 +57,15 @@
   .contacts:hover,
   .contacts:focus {
     color: var(--accent-color);
+  }
+
+  .adress-item {
+    margin-bottom: 9px;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+  }
+
   }
   .adress-item:not(:last-child) {
     margin-bottom: 9px;
@@ -48,6 +79,11 @@
     text-transform: uppercase;
     color: var(--main-white);
     margin-bottom: 20px;
+    text-align: center;
+    @media screen and (min-width:1200px) {
+      text-align: left;
+      
+    }
   }
   .footer-list {
     display: flex;
@@ -74,12 +110,21 @@
     fill: var(--main-white);
   }
   .footer-main {
+    display: block;
+    align-items: center;
+    justify-content: center;
+   @media screen and (min-width: 1200px) {
     display: flex;
     align-items: baseline;
     gap: 70px;
     justify-content: space-between;
+    
+   }
   }
   
+  .footer-mail {
+    display: block;
+  }
   
   .footer-mail-title {
     font-weight: 700;
@@ -88,31 +133,55 @@
     text-transform: uppercase;
     color: var(--main-white);
     margin-bottom: 20px;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
   }
   .footer-form {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 12px;
+    
+    @media screen and (min-width: 1200px) {
+      align-items: center;
+      flex-direction: row;
+      justify-content: center;
+      gap: 12px;    
   }
+  }
+
   .email-form {
     background-color: var(--background-main);
   }
   .footer-form input {
-    width: 358px;
+    width: 100%;
     height: 50px;
     padding: 15px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     color: var(--main-white);
+
+    @media screen and (min-width: 768px) {
+      display: block;
+      margin: 0 auto;
+      max-width: 450px;
+      padding: 16px 295px 16px 16px;
+  }
+    @media screen and (min-width: 1200px) {
+      max-width: 358px;
+      padding: 16px 295px 16px 16px;
+  }
   }
   
   .subscribe-btn {
     display: flex;
     align-items: center;
     gap: 10px;
-    max-width: 200px;
-    padding: 10px 28px;
+    width: 200px;
+    padding: 10px 35px;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.86;
@@ -124,3 +193,28 @@
     cursor: pointer;
   }
   
+  .footer-wrap {
+    margin-bottom: 60px;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      align-items: baseline;
+      justify-content: center;
+      gap: 165px;
+
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    align-items: baseline;
+    gap: 70px;
+    justify-content: space-between;
+    margin-bottom: 0;
+    }
+  }
+.footer_form-wrap {
+  width: 100%;
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+}
+}
