--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,8 +1,14 @@
-.gallery__list {
+.gallery {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .gallery {
+    display: block;
+  }
+  .gallery__list {
     display: flex;
     gap: 30px;
   }
-  
   
   .thumb {
     position: relative;
@@ -26,4 +32,5 @@
     text-transform: uppercase;
     color: var(--main-white);
   }
+}
 }
