--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,20 +9,34 @@
     background-position: center;
     background-size: cover;
     color: var(--main-white);
+    padding-top: 118px;
+    padding-bottom: 118px;
+    text-align: center;
+    
+
+
+  @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
-    text-align: center;
-  
+    
+  }
+    
   
   &__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     margin: 0 auto;
     margin-bottom: 30px;
-    width: 696px;
+    
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 1.36;
+      max-width: 696px;
+  }
+    
   }
   
   &__button {
@@ -34,8 +48,12 @@
     line-height: 1.88;
     letter-spacing: 0.06em;
     cursor: pointer;
-    padding: 10px 32px;
+    padding: 10px 24px;
     border-radius: 4px;
     border: none;
+
+    @media screen and (min-width: 1200px) {
+      padding: 10px 32px;  
+    }
   }
 }
