--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -20,12 +20,16 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 528px;
+    width: 450px;
     background-color: var(--main-white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 40px;
+    @media screen and (min-width: 1200px) {
+     width: 528px;
+      
+    }
   }
   .modal-btn {
     position: absolute;
@@ -51,12 +55,16 @@
   
   .register-title {
     display: block;
+    text-align: center;
     margin-bottom: 12px;
     font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.03em;
   color: var(--main-color);
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
   }
   
   .register-group {
@@ -153,12 +161,18 @@
   }
   .labelform-agreement {
     font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--text-color);
   user-select: none;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+}
   }
+
+
   .agreement-link {
     color: var(--accent-color);
   }
