--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,8 +1,18 @@
 .filter {
     display: flex;
-    justify-content: center;
     gap: 8px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+
+    @media screen and (min-width: 768px) {
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      justify-content: center;
+      margin-bottom: 50px;
+    }
+    
   }
   
   .filter-btn {
@@ -14,6 +24,8 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
+    letter-spacing: 0.03em;
+   padding: 6px 25px;;
     text-align: center;
     cursor: pointer;
     border-radius: 4px;
@@ -44,13 +56,27 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
   .filter-list {
-    display: flex;
+    @media screen and (min-width: 768px) {
+      display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    }
+    
   }
   .filter-item {
-    flex-basis: calc((100% - 60px) / 3);
     border: 1px solid #eeeeee;
+    margin-bottom: 30px;
+    &:last-child{
+      margin-bottom: 0;
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
+  margin-bottom: 0;
+  }
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 60px) / 3);
+    margin-bottom: 0;
+    }
   }
   .filter-title {
     margin-bottom: 4px;
