--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -11,8 +11,18 @@
   }
   
   .group-list {
-    display: flex;
-    gap: 30px;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+    gap: 30px;      
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    gap: 30px;  
+    flex-wrap: nowrap;    
+    }
+    
   }
   
   .group-item {
@@ -20,6 +30,15 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 30px) / 2);
+      margin-bottom: 0px;
+    }
+  
   }
   
   .group-text {
