--- a/css/main.css
+++ b/css/main.css
@@ -288,6 +288,7 @@ a {
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+  padding: 15px;
 }
 @media screen and (min-width: 768px) {
   .logo {
