--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -20,14 +20,16 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
+    min-height: 581px;
     background-color: var(--main-white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 40px;
     @media screen and (min-width: 1200px) {
-     width: 528px;
+     max-width: 528px;
       
     }
   }
