--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--main-white);
-    padding: 48px 84px 40px 40px;
+    padding: 48px 40px;
     display: flex;
     flex-direction: column;
 
@@ -79,10 +79,13 @@ letter-spacing: 0.02em;
 }
 .mobile-contacts__link-active {
     font-weight: 500;
-    font-size: 34px;
+    font-size: 27px;
     line-height: 1.18;
     letter-spacing: 0.02em;
 color: var(--accent-color);
+@media screen and (min-width: 450px) {
+    font-size: 34px;
+}
 }
 
 
@@ -120,8 +123,11 @@ color: var(--accent-color);
 .mobile-socials_link {
     display: block;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 12px;
     line-height: 1.22;
     letter-spacing: 0.02em;
     color: var(--accent-color);
+    @media screen and (min-width: 450px) {
+        font-size: 18px;
+    }
 }
