--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -6,6 +6,8 @@
   }
   
   .clients-item{
+    display: flex;
+    flex-wrap: wrap;
     flex-basis: calc((100% - 30px) / 2);
 
     @media screen and (min-width: 768px) {
@@ -22,16 +24,11 @@
     align-items: center;
     border: 1px solid #afb1b8;
     border-radius: 4px;
-    width: 210px;
+    width: 100%;
     height: 92px;
     fill: var(--icon-color);
     transition: fill var(--anim), border var(--anim);
-    @media screen and (min-width: 768px) {
-      width: 226px;      
-    }
-    @media screen and (min-width: 1200px) {
-      width: 170px;  
-    }
+  
   }
   .clients-link:hover,
   .clients-link:focus {
