--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -50,7 +50,8 @@
     text-transform: uppercase;
     margin: 0 auto;
     margin-bottom: 30px;
-
+    max-width: 360px;
+  
     @media screen and (min-width: 1200px) {
       font-size: 44px;
       line-height: 1.36;
